Fix spacing errors

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,6 @@ body {
   margin: 0;
 }
 
-
 h2 {
   font-family: "Open Sans", sans-serif;
   font-size: 4rem;
@@ -19,15 +18,18 @@ h2 {
   color: #fff;
   position: absolute;
   bottom: 0;
-  left: 250px
+  left: 250px;
+  width: 60%;
 }
 
 p {
-font-family: "Open Sans", sans-serif;
-font-style: italic;
-font-size: 2rem;
-position: absolute;
-bottom: 0;
+  font-family: "Open Sans", sans-serif;
+  font-style: italic;
+  font-size: 2rem;
+  position: absolute;
+  bottom: 0;
+  width: 60%;
+  left: 250px;
 }
 
 .img-flex {
